@startuml
'https://plantuml.com/class-diagram

interface ParkingServletable
abstract class ParkingServlet
abstract class ParkhausServlet
class Level1Servlet

class Car {
    String[] params
}
interface CarIF{
    nr() : int
    licensePlate() : String
    begin() : long
    end() : long
    duration() : int
    price() : int
    hash() : String
    space() : int
    kunde() : String
    typeCar() : String
    toString() : String
}

interface List
interface Collection

ParkingServletable <|-- ParkingServlet
ParkingServlet <|-- ParkhausServlet
ParkhausServlet <|-- Level1Servlet

CarIF "0..*" -left-o "1" ParkhausServlet
CarIF <|-- Car



class ArrayList {
Object[] elementData
size()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}

@enduml